--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,8 @@
       method="post"
       onsubmit="onSubmit()"
     >
-
       <fieldset class="fieldset">
         <legend>Personal information</legend>
-
         <div class="formField">
           <label for="surname">Surname:</label>
           <input
@@ -62,7 +60,9 @@
         </div>
 
         <div>
-          <label for="agreementTerms">I accept the term of the agreement</label>
+          <label for="agreementTerms">
+            I accept the term of the agreement
+          </label>
           <input
             type="checkbox"
             id="agreementTerms"
@@ -73,7 +73,6 @@
 
       <fieldset class="fieldset">
         <legend>Registration</legend>
-
         <div class="formField">
           <label for="email">E-mail:</label>
           <input
@@ -102,7 +101,6 @@
 
         <div class="formField">
           <span>Do you love cats?</span>
-
           <input
             type="radio"
             id="yesCats"
@@ -121,7 +119,6 @@
         </div>
 
         <div class="formField">
-
           <label for="favColor">What is your favorite color?</label>
           <input
             type="color"
@@ -132,7 +129,6 @@
 
         <div class="formField">
           <label for="sleepTime">What time do you go to bed?</label>
-
           <input
             type="time"
             id="sleepTime"
@@ -142,7 +138,6 @@
 
         <div class="formField">
           <label for="favCars">What are your favorite brand of cars?</label>
-
           <select
             name="favoriteBrandsOfCars"
             id="favCars"
@@ -156,7 +151,6 @@
 
         <div class="formField">
           <label for="workRate">How do you rate our work?</label>
-
           <input
             type="range"
             id="workRate"
@@ -168,16 +162,13 @@
 
       <fieldset class="fieldset">
         <legend>Additional info:</legend>
-
         <div class="formField">
           <label for="comments">Comments:</label>
-
           <textarea name="yourComments" id="comments"></textarea>
         </div>
 
         <div class="formField">
           <label for="recommendation">Would you recommend us?</label>
-
           <select
             name="recommend"
             id="recommendation"
