Button tag was changed

--- a/src/index.html
+++ b/src/index.html
@@ -179,10 +179,7 @@
         </div>
       </fieldset>
 
-      <input
-        type="submit"
-        value="Submit"
-      >
+      <button type="submit">Submit</button>
     </form>
 
     <script type="text/javascript" src="./main.js"></script>
